@@ -23,11 +23,11 @@
 
 #ifndef HAVE_VSNPRINTF
 #include <stdarg.h> /* for va_list */
-extern void vsnprintf(char *buff, size_t bufsiz, const char *fmt, va_list ap);
+extern int vsnprintf(char *buff, size_t bufsiz, const char *fmt, va_list ap);
 #endif
 
 #ifndef HAVE_SNPRINTF
-extern void snprintf(char *buff, size_t bufsiz, const char *fmt, ...);
+extern int snprintf(char *buff, size_t bufsiz, const char *fmt, ...);
 #endif /* HAVE_SNPRINTF */
 
 #ifndef HAVE_STRERROR
